Made nav a flex container in the column direction so I could add a gap between .main-nav and .misc-nav and made both .main-nav, .misc-nav and their children grid containers to format them correctly.

--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,33 @@ main {
 .navigation {
   grid-row: 2 / 3;
   grid-column: 1 / 2;
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+}
+
+.main-nav {
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: 1fr;
+}
+
+.misc-nav {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: 1fr;
+}
+.navigation .nav-element {
+  display: grid;
+  grid-template: 1fr / 1fr 3fr;
+  justify-items: start;
+  align-items: center;
+}
+
+.navigation img {
+  background-color: mintcream;
+  width: 30px;
+  height: 30px;
 }
 
 .searchbar {
